# tauri-bindgen

./: Cargo.toml
crates/gen-guest-rust/: Cargo.toml
crates/gen-guest-ts/src/: lib.rs
crates/gen-host/: Cargo.toml
crates/gen-js/: Cargo.toml
crates/gen-markdown/: Cargo.toml
crates/gen-rust/src/: lib.rs
crates/guest-rust/: Cargo.toml
crates/guest-rust-macro/: Cargo.toml
crates/guest-rust/src/: lib.rs
crates/host/: Cargo.toml
crates/wit-parser/: Cargo.toml  ast.json
crates/wit-parser/src/: lib.rs  typecheck.rs
src/: logger.rs  main.rs
