[package]
name = "tauri-bindgen-gen-host"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tauri-bindgen-core.workspace = true
tauri-bindgen-gen-rust = { path = "../gen-rust" }
wit-parser.workspace = true
heck.workspace = true
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true
prettyplease = "0.2"
clap = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
cli = ["clap"]
