[package]
name = "tauri-bindgen-gen-markdown"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false
test = false

[dependencies]
tauri-bindgen-core.workspace = true
heck.workspace = true
clap = { workspace = true, optional = true }
wit-parser.workspace = true

[features]
cli = ["clap"]
